--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^2.1.1",
+    "@nuxtjs/google-analytics": "^1.0.0",
     "nuxt": "^1.0.0-rc11"
   },
   "devDependencies": {
