--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "build-server": "backpack build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -15,6 +16,9 @@
   "dependencies": {
     "@nuxtjs/apollo": "^2.1.1",
     "@nuxtjs/google-analytics": "^1.0.0",
+    "axios": "^0.17.1",
+    "backpack-core": "^0.7.0",
+    "express": "^4.16.3",
     "nuxt": "^1.0.0-rc11",
     "timeago.js": "^3.0.2"
   },
