--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.17.1",
     "backpack-core": "^0.7.0",
     "express": "^4.16.3",
+    "graphql-request": "^1.6.0",
     "nuxt": "^1.0.0-rc11",
     "timeago.js": "^3.0.2"
   },
