--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Samuell",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
+    "dev": "nuxt",
     "build": "nuxt build",
     "build-server": "backpack build",
     "start": "nuxt start",
@@ -18,6 +18,7 @@
     "@nuxtjs/google-analytics": "^1.0.0",
     "axios": "^0.17.1",
     "backpack-core": "^0.7.0",
+    "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "graphql-request": "^1.6.0",
     "nuxt": "^1.0.0-rc11",
@@ -33,7 +34,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.12.0",
     "sass-loader": "^6.0.6"
   }
 }
