--- a/package.json
+++ b/package.json
@@ -16,25 +16,23 @@
   "dependencies": {
     "@nuxtjs/apollo": "^2.1.1",
     "@nuxtjs/google-analytics": "^1.0.0",
-    "axios": "^0.17.1",
-    "backpack-core": "^0.7.0",
+    "@nuxtjs/style-resources": "^0.1.2",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "express": "^4.16.3",
-    "graphql-request": "^1.6.0",
-    "nuxt": "^1.0.0-rc11",
+    "nuxt": "^1.4.5",
     "timeago.js": "^3.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.7"
   }
 }
