--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/apollo": "^2.1.1",
-    "@nuxtjs/google-analytics": "^1.0.0",
+    "@nuxtjs/apollo": "^4.0.0-rc9",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^1.4.5",
+    "nuxt": "^2.8.1",
     "timeago.js": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/runtime-corejs2": "^7.5.5",
     "babel-eslint": "^7.2.3",
+    "core-js": "^2.6.9",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -33,6 +35,6 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^7.1.0"
   }
 }
