--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/style-resources": "^0.1.2",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "lodash.debounce": "^4.0.8",
     "nuxt": "^2.8.1",
     "timeago.js": "^3.0.2"
   },
