--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "build-server": "backpack build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -37,5 +36,12 @@
     "eslint-plugin-standard": "^3.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0"
+  },
+  "prettier": {
+		"singleQuote": true,
+		"semi": true,
+		"stylelintIntegration": true,
+		"eslintIntegration": true,
+		"trailingComma": "es5"
   }
 }
