Refactor to nuxt3

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
-# dependencies
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
 node_modules
 
-# logs
-npm-debug.log
+# Logs
+logs
+*.log
 
-# Nuxt build
-.nuxt
+# Misc
+.DS_Store
+.fleet
+.idea
 
-# Nuxt generate
-dist
-build
+# Local env files
+.env
+.env.*
+!.env.example
