--- a/package.json
+++ b/package.json
@@ -4,44 +4,23 @@
   "description": "Nuxt.js project",
   "author": "Samuell",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/apollo": "^4.0.0-rc9",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/style-resources": "^0.1.2",
     "axios": "^0.18.0",
-    "cross-env": "^5.2.0",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.8.1",
+    "sass": "^1.69.5",
     "timeago.js": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/runtime-corejs2": "^7.5.5",
-    "babel-eslint": "^7.2.3",
-    "core-js": "^2.6.9",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
-  },
-  "prettier": {
-		"singleQuote": true,
-		"semi": true,
-		"stylelintIntegration": true,
-		"eslintIntegration": true,
-		"trailingComma": "es5"
+    "nuxt": "^3.9.0",
+    "vue": "^3.3.13",
+    "vue-router": "^4.2.5"
   }
 }
