--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "lodash.debounce": "^4.0.8",
-    "sass": "^1.69.5",
-    "timeago.js": "^3.0.2"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "nuxt": "^3.9.0",
